# minibot

./: .gitignore  README.md  installer.sh  tools_installler.sh
controller/: .gitignore  CMakeLists.txt  package.xml
controller/config/: calibration_params.yaml  params.yaml
controller/launch/: pose_calibration.launch.py  pose_commander.launch.py  pose_commander_action_server.launch.py  teleop_twist_keyboard.launch.py
controller/src/: line_follower.cpp  move_in_circles.cpp  move_robot.cpp  pose_calibration.cpp  pose_commander.cpp  pose_commander_action_server.cpp  pose_commander_server.cpp
gui/: .gitignore  package.xml  setup.py
gui/gui/: main.py  simulator.py
gui/gui/app/: app.py  app_context.py  canvas_panel.py  colors.py  controller.py  gui_adapter.py  menu_bar.py
gui/gui/app/canvas/: animation.py  canvas_panel.py  grid.py  light.py  objects.py  plot_animation.py  polygon.py  robot.py  route.py
gui/gui/app/canvas/robot/: body.py  head.py  hokuyo.py  parts.py  polygon.py  robot.py  route.py  sensors.py  wheels.py
gui/gui/app/components/canvas/: animation.py  canvas_panel.py  grid.py  light.py  minibot.py  objects.py  route.py
gui/gui/app/components/canvas/robot/: parts.py  robot.py  route.py  sensors.py
gui/gui/app/components/menu/: menu_bar.py
gui/gui/app/components/panels/: canvas_panel.py  side_panel.py
gui/gui/app/components/sections/: buttons_section.py  sensors_section.py
gui/gui/app/components/side_panel/: buttons_section.py  environment_section.py  robot_section.py  sensors_section.py  side_panel.py
gui/gui/app/menu/: menu_bar.py
gui/gui/app/right_panel/: buttons_section.py  environment_section.py  right_panel.py  robot_section.py  sensors_section.py
gui/gui/app/side_panel/: buttons_section.py  environment_section.py  robot_section.py  sensors_section.py  side_panel.py
gui/gui/config/: colors.py  constants.py
gui/gui/controllers/: controller.py
gui/gui/domain/: service.py
gui/gui/infraestructure/: file_manager.py  ros.py  simulator_node.py
gui/launch/: simulator.launch.py
gui/maps/bug/: bug.top  bug.wrl
gui/maps/empty/: empty.wrl
gui/maps/final/: final.wrl
gui/maps/final_doors/: final_doors.top  final_doors.wrl
gui/maps/obstacle/: obstacle.wrl
gui/maps/obstacles/: obstacles.top  obstacles.wrl
gui/maps/random_1/: random_1.top  random_1.wrl
gui/maps/random_10/: random_10.top  random_10.wrl
gui/maps/random_2/: random_2.top  random_2.wrl
gui/maps/random_3/: random_3.top  random_3.wrl
gui/maps/random_4/: random_4.top  random_4.wrl
gui/maps/random_5/: random_5.wrl
gui/maps/random_6/: random_6.top  random_6.wrl
gui/maps/random_7/: random_7.top  random_7.wrl  random_7_old.top  random_7_old.wrl
gui/maps/random_8/: random_8.top  random_8.wrl  random_8_old.top  random_8_old.wrl
gui/maps/random_9/: random_9.top  random_9.wrl
gui/objects/: objects.txt
hardware/: .gitignore  CMakeLists.txt  package.xml
hardware/config/: params.yaml
hardware/firmware/: platformio.ini
hardware/firmware/esp32_relays/: platformio.ini
hardware/firmware/esp32_relays/src/: main.cpp
hardware/firmware/esp32s3_micro_ros/src/: main.cpp
hardware/firmware/esp32s3_minibot/: platformio.ini
hardware/firmware/esp32s3_minibot/src/: alarm.cpp  alarm.h  config.h  encoders.cpp  encoders.h  main.cpp  motor_control.cpp  motor_control.h  motors_control.cpp  motors_control.h  ros_setup.cpp  ros_setup.h  sensors.cpp  sensors.h  utils.h
hardware/launch/: hardware.launch.py
hardware/maps/: map.yaml  mapa_test.yaml
hardware/rviz/: display.rviz
hardware/src/: lidar_sensor.cpp  lidar_simulator.cpp  light_sensors.cpp  light_sensors_simulator.cpp  robot_introspection.cpp  spot_light_marker.cpp  spot_lights_marker.cpp  spotlight_marker.cpp  static_tf_map_to_odom.cpp
hardware/urdf/: minibot.urdf.xacro
interfaces/: .gitignore  CMakeLists.txt  package.xml
interfaces/action/: GoToPose.action
interfaces/msg/: RobotStatus.msg
interfaces/srv/: DisconnectSource.srv  GetLightReadings.srv  GetParams.srv  GetScan.srv  GetVelParams.srv  GoToPose.srv  OdomSetPoint.srv  SetParam.srv  SetParams.srv  SetVelParams.srv  TurnOnFan.srv
mobile_base/: .gitignore  CMakeLists.txt  package.xml
mobile_base/launch/: mobile_base.launch.py
mobile_base/src/: mobile_base.cpp  mobile_base_simul.cpp
motion_planner/: .gitignore  CMakeLists.txt  package.xml
motion_planner/config/: params.yaml
motion_planner/include/: .gitignore
motion_planner/include/motion_planner/: motion_planner.hpp
motion_planner/include/motion_planner/state_machines/: light_follower.hpp  sm_avoid_obstacles.hpp  sm_avoidance_destination.hpp  sm_destination.hpp  user_sm.hpp
motion_planner/include/motion_planner/utilities/: motion_planner_utilities.hpp  structures.hpp  utilities.hpp
motion_planner/launch/: motion_planner.launch.py
motion_planner/src/: main.cpp  motion_planner.cpp
tests/: .gitignore  package.xml  setup.py
tests/config/: battery_layout.xml  cmd_calibrator_layout.xml  pid_calibrator_layout.xml  pose_calibrator_layout.xml  sharps_layout.xml
tests/launch/: cmd_calibration.launch.py  tests.launch.py
tests/tests/: main.py
tests/tests/app/: app.py  app_context.py
tests/tests/app/components/: behaviors_panel.py  cmd_pose_panel.py  cmd_vel_panel.py  draw_panel.py  params_pop_up.py  status_panel.py
tests/tests/controllers/: controller.py
tests/tests/domain/: service.py
tests/tests/infraestructure/: ros.py
